--- a/index.html
+++ b/index.html
@@ -28,6 +28,6 @@
   </body>
 
   <footer>
-    www 🎲 App Brewery 🎲 com
+    Made by <a href="https://www.linkedin.com/in/ritikrocky2002">Ritik Shekhar Parida</a>
   </footer>
 </html>
