--- a/index.html
+++ b/index.html
@@ -10,24 +10,25 @@
   <body>
 
     <div class="container">
-      <h1>Refresh Me</h1>
+      <h1>Roll the Dice</h1>
 
       <div class="dice">
-        <p>Player 1</p>
+        <p>Player</p>
         <img class="img1" src="images/dice6.png">
       </div>
 
       <div class="dice">
-        <p>Player 2</p>
+        <p>CPU</p>
         <img class="img2" src="images/dice6.png">
       </div>
-
+      <br>
+      <button id="button">Roll The Dice</button>
     </div>
 
     <script src="index.js"></script>
   </body>
 
   <footer>
-    Made by <a href="https://www.linkedin.com/in/ritikrocky2002">Ritik Shekhar Parida</a>
+   <p>Made By <a href="">Ritik Shekhar Parida</a></p>
   </footer>
 </html>
